<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    tools:context=".ui.fragments.signin.SignInFragment">

    <ImageView
        android:id="@+id/img_notes"
        android:layout_width="114dp"
        android:layout_height="114dp"
        android:layout_marginTop="100dp"
        android:layout_marginBottom="15dp"
        android:src="@drawable/notes"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="ContentDescription" />

    <TextView
        android:id="@+id/tv_reg"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="55dp"
        android:text="@string/Регистрация_по_номеру"
        android:textColor="#8E8B8B"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/img_notes" />

    <EditText
        android:id="@+id/phone_et"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:layout_marginHorizontal="20dp"
        android:layout_marginTop="80dp"
        android:background="@drawable/rouder_et_text"
        android:drawableStart="@drawable/maskgroup"
        android:drawablePadding="5dp"
        android:inputType="phone"
        android:paddingStart="10dp"
        android:text="@string/_996"
        android:textColor="@color/white"
        android:textColorHint="#B1B1B1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_reg"
        tools:ignore="Autofill,LabelFor,RtlSymmetry" />

    <EditText
        android:id="@+id/code_et"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:layout_marginHorizontal="20dp"
        android:layout_marginTop="30dp"
        android:background="@drawable/rouder_et_text"
        android:drawableStart="@drawable/pochta"
        android:drawablePadding="10dp"
        android:hint="@string/Ваш_код"
        android:inputType="number"
        android:paddingStart="10dp"
        android:textColor="@color/white"
        android:textColorHint="#B1B1B1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/phone_et"
        tools:ignore="Autofill,RtlSymmetry" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/send_phone_number"
        android:layout_width="match_parent"
        android:layout_height="65dp"
        android:layout_marginHorizontal="78dp"
        android:layout_marginTop="50dp"
        android:backgroundTint="#D88B02"
        android:text="@string/Получить_код"
        android:textStyle="bold"
        app:cornerRadius="30dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/code_et" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/send_code_btn"
        android:layout_width="match_parent"
        android:layout_height="65dp"
        android:layout_marginHorizontal="78dp"
        android:layout_marginTop="5dp"
        android:backgroundTint="#D88B02"
        app:cornerRadius="30dp"
        android:text="@string/Подтвердить"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/send_phone_number" />


</androidx.constraintlayout.widget.ConstraintLayout>